--- a/arch/arm/boot/dts/sun6i-a31.dtsi
+++ b/arch/arm/boot/dts/sun6i-a31.dtsi
@@ -217,13 +217,13 @@
 
 		apb1_rst: reset@01c202d0 {
 			#reset-cells = <1>;
-			compatible = "allwinner,sun6i-a31-apb1-reset";
+			compatible = "allwinner,sun4i-clock-reset";
 			reg = <0x01c202d0 0x4>;
 		};
 
 		apb2_rst: reset@01c202d8 {
 			#reset-cells = <1>;
-			compatible = "allwinner,sun6i-a31-apb2-reset";
+			compatible = "allwinner,sun4i-clock-reset";
 			reg = <0x01c202d8 0x4>;
 		};
 
