fixup! ARM: sun6i: Add the reset controller to the DTSI

--- a/arch/arm/boot/dts/sun6i-a31.dtsi
+++ b/arch/arm/boot/dts/sun6i-a31.dtsi
@@ -305,7 +305,7 @@
 			reg-shift = <2>;
 			reg-io-width = <4>;
 			clocks = <&apb2_gates 21>;
-			resets = <&apb2rst 21>;
+			resets = <&apb2_rst 21>;
 			status = "disabled";
 		};
 
