dts sunxi: Add gmac to sun7i-a20.dtsi

--- a/arch/arm/boot/dts/sun7i-a20.dtsi
+++ b/arch/arm/boot/dts/sun7i-a20.dtsi
@@ -246,6 +246,17 @@
 				allwinner,drive = <0>;
 				allwinner,pull = <0>;
 			};
+
+			gmac_pins_a: gmac0@0 {
+				allwinner,pins = "PA0", "PA1", "PA2",
+						"PA3", "PA4", "PA5", "PA6",
+						"PA7", "PA8", "PA9", "PA10",
+						"PA11", "PA12", "PA13", "PA14",
+						"PA15", "PA16";
+				allwinner,function = "gmac";
+				allwinner,drive = <0>;
+				allwinner,pull = <0>;
+			};
 		};
 
 		timer@01c20c00 {
@@ -404,6 +415,18 @@
 			interrupt-controller;
 			#interrupt-cells = <3>;
 			interrupts = <1 9 0xf04>;
+		};
+
+		gmac: gmac@01c50000 {
+			compatible = "allwinner,gmac";
+			reg = <0x01c50000 0x2000>,
+			      <0x01c20000 0x200>;
+			interrupts = <0 85 1>;
+			interrupt-names = "macirq";
+			clocks = <&ahb_gates 49>;
+			clock-names = "stmmaceth";
+			status = "disabled";
+			snps,pbl = <2>;
 		};
 	};
 };
